@startuml CDM
!theme plain
hide circle

' ================= ENTITIES =================

entity "USER" as user #E8F4FF {
  * **id [PK] : UUID**
  --
  email : Email
  password_hash : string
  first_name : string
  last_name : string
  full_name : string
  phone : PhoneNumber
  address_default: string
  role (user/admin) : Enum
  created_at : DateTime
}

entity "CATEGORY" as category #E8F8F5 {
  * **id [PK] : UUID**
  --
  * parent_id [FK] : UUID
  name : string
  description : string
}

entity "PRODUCT" as product #E9F7EF {
  * **id [PK] : UUID**
  --
  * category_id [FK] : UUID
  name : string
  description : string
  price : decimal
  stock_qty : int
  carbon_index : float
  material_origin : string
  decompose_percent : float
  recycle_percent : float
}

entity "PRODUCT_IMAGE" as product_image #F2F3F4 {
  * **id [PK] : UUID**
  --
  * product_id [FK] : UUID
  azure_url : string
  is_primary : boolean
}

entity "CART" as cart #FEF9E7 {
  * **id [PK] : UUID**
  --
  * user_id [FK] : UUID
  updated_at : DateTime
}

entity "CART_ITEM" as cart_item #FEF9E7 {
  * **id [PK] : UUID**
  --
  * cart_id [FK] : UUID
  * product_id [FK] : UUID
  quantity : int
}

entity "ORDER" as order #FDEDEC {
  * **id [PK] : UUID**
  --
  * user_id [FK] : UUID
  status (packing/delivering/delivered) : Enum
  delivery_address : string
  latitude : float
  longitude : float
  total_amount : int
  total_co2_saved : float
  created_at : DateTime
}

entity "ORDER_ITEM" as order_item #FDEDEC {
  * **id [PK] : UUID**
  --
  * order_id [FK] : UUID
  * product_id [FK] : UUID
  quantity : int
  unit_price : decimal
}

entity "PAYMENT" as payment #F2F3F4 {
  * **id [PK] : UUID**
  --
  * order_id [FK] : UUID
  method (bank/momo) : Enum
  status (pending/paid/refunded) : Enum
  amount : decimal
  transaction_ref : string
}

entity "GREEN_POINT" as green_point #E9F7EF {
  * **id [PK] : UUID**
  --
  * user_id [FK] : UUID
  balance : float
  earned_total : float
  updated_at : DateTime
}

entity "VOUCHER" as voucher #E9F7EF {
  * **id [PK] : UUID**
  --
  code : string
  discount_value : decimal
  points_cost : float
  expires_at : DateTime
  is_used : boolean
}

entity "CHAT_SESSION" as chat_session #F4ECF7 {
  * **id [PK] : UUID**
  --
  * user_id [FK] : UUID
  created_at : DateTime
}

entity "CHAT_MESSAGE" as chat_message #F4ECF7 {
  * **id [PK] : UUID**
  --
  * session_id [FK] : UUID
  role (user/bot) : Enum
  content : string
  created_at : DateTime
}

entity "DOCUMENT" as document #F2F3F4 {
  * **id [PK] : UUID**
  --
  * uploaded_by [FK] : UUID
  file_name : string
  file_type (pdf/docx/txt) : Enum
  azure_url : string
}

entity "EMBEDDING" as embedding #F2F3F4 {
  * **id [PK] : UUID**
  --
  * document_id [FK] : UUID
  chunk_text : string
  vector_id : string
}

' ================= RELATIONSHIPS =================

' Người dùng và Giỏ hàng
user ||--|| cart : 1-1
cart ||--o{ cart_item : 1-N

' Sản phẩm và Danh mục
category |o--o{ category : 1-N (self)
category ||--o{ product : 1-N
product ||--o{ product_image : 1-N
product ||--o{ cart_item : 1-N

' Đơn hàng và Thanh toán
user ||--o{ order : 1-N
order ||--o{ order_item : 1-N
product ||--o{ order_item : 1-N
order ||--|| payment : 1-1

' Tích điểm xanh (Green/Eco)
user ||--|| green_point : 1-1
green_point ||--o{ voucher : 1-N

' AI Chat & RAG
user ||--o{ chat_session : 1-N
chat_session ||--o{ chat_message : 1-N
user ||--o{ document : 1-N
document ||--o{ embedding : 1-N

@enduml
